# local-ml-flow

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.lambda  Dockerfile.localstack  README.md  docker-compose.yml  pyproject.toml  sonar-project.properties
.github/workflows/: build.yml  main_pipeline.yml  promote.yml  sonar.yml
src/: __init__.py  main.py
src/api/v1/bucket/: get_all_buckets.py
src/api/v3/bucket/: get_all_buckets.py  get_all_models.py  get_dataset.py
src/api/v3/lambdas/: get_all_lambdas.py
src/api/v3/result/: get_result.py
src/config/: __init__.py  client.py  logger.py
src/core/: __init__.py
src/core/lambda/: inference.py  ingestion.py  save_model.py
src/core/lambdas/: inference.py  ingestion.py
src/core/model/: conversion.py  evaluation.py  save_model.py  train.py  train_test_split.py
terraform/: main.tf  terraform.tfvars.example
terraform/logs/: output.txt.example
test/: __init__.py
test/unit/: test_app_config.py
test/unit/api/: test_get_all_lambdas.py  test_get_all_models.py  test_get_dataset.py  test_get_result.py
test/unit/config/: test_client.py  test_get_all_buckets.py  test_logger.py
test/unit/lambda/: test_inference.py  test_ingestion.py
test/unit/model/: test_clean_df.py  test_evaluation.py  test_save_model.py  test_train.py  test_train_test_split.py
