[build-system]
requires=["setuptools", "setuptools-scm"]
build-backend="setuptools.build_meta"

[project]
name="Local-ML-Flow"
version="1.0.0"
authors=[
    {name="Mathieu AUDIBERT"}
]
readme="README.md"
requires-python=">=3.10"
dependencies=[
    "fastapi",
    "python-dotenv",
    "boto3",
    "localstack",
    "pandas",
    "scikit-learn"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "tox",
    "awscli",
    "httpx"
]

[tool.setuptools.packages.find]
where=["."]
include=["src*"]

[tool.pytest.ini_options]
pythonpath=["."]

[tool.setuptools_scm]